--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -5,22 +5,19 @@ import Card from "./Card/index.astro";
 <Card colSpan="md:col-span-1" rowSpan="md:row-span-6" title="About me">
   <div class="flex flex-col gap-2">
     <p class="text-sm font-light">
-      Hi, I'm Gianmarco, a front-end software developer from Italy.
+      Hi, I'm João Pedrozo, a front-end software developer from Brazil.
       <br />
-       My primary tools of choice includes:
+      My primary tools of choice includes:
       <ul class="list-disc list-inside">
-        <li>JavaScript</li>
         <li>React</li>
-        <li>Solidjs</li>
-        <li>Astro</li>
-        <li>svelte</li>
-        <li>Nodejs</li>
+        <li>Tailwind</li>
+        <li>Next.js</li>
+        <li>Typescript</li>
       </ul>
     </p>
     <p class="text-sm font-light">
-      Beyond coding, I'm passionate about design and 3D modeling and traveling.
-      An unusual hobby of mine is collecting vintage passports, they're
-      interesting pieces of history to me.
+      Beyond coding, I'm passionate about design and 3D modeling, cinema, music
+      and games.
     </p>
     <p class="text-sm font-light">
       While I have some preferred tools, I always choose the best one for the
