--- a/src/components/ContactsCard.astro
+++ b/src/components/ContactsCard.astro
@@ -12,8 +12,8 @@ import { LINKS } from "../lib/constants";
     </header>
     <address class="flex flex-col mt-4">
       <h2 class="text-gray-500">Contact Details</h2>
-      <p>cavallogianmarco@gmail.com</p>
-      <p>Italy</p>
+      <p>jp.professional@outlook.com</p>
+      <p>Brazil</p>
     </address>
     <div class="flex flex-col mt-4 w-fit">
       <h2 class="text-gray-500">Socials</h2>
@@ -24,11 +24,14 @@ import { LINKS } from "../lib/constants";
         <li>
           <a href={LINKS.github} target="_blank">Github</a>
         </li>
-        <li>
+        <!-- <li>
           <a href={LINKS.medium} target="_blank">Medium</a>
-        </li>
-        <li>
+        </li> -->
+        <!-- <li>
           <a href={LINKS.discord} target="_blank">Discord</a>
+        </li> -->
+        <li>
+          <a href={LINKS.X} target="_blank">Twitter</a>
         </li>
       </ul>
     </div>
