--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -66,7 +66,7 @@ import Globe from "../components/Globe";
           href="https://astro.build/"
           target="_blank"
           class="text-red-500">Astro</a
-        > by Gianmarco.
+        > by Gianmarco (& personalized by me).
       </p>
     </Card>
   </main>
