feat: remove travel block

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -48,7 +48,7 @@ import Globe from "../components/Globe";
       title="Blog"
       href="/blog"
     />
-    <Card
+    <!-- <Card
       colSpan="md:col-span-1"
       rowSpan="md:row-span-1"
       title="Countries I visited"
@@ -58,7 +58,7 @@ import Globe from "../components/Globe";
       <div class="h-full w-full absolute inset-0 -z-10">
         <Globe client:load />
       </div>
-    </Card>
+    </Card> -->
     <Now />
     <Card colSpan="md:col-span-1" rowSpan="md:row-span-1">
       <p class="text-xs">
