chore: add my name in the other necessary places

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,7 +32,7 @@ import Globe from "../components/Globe";
 </script>
 
 <Layout
-  title="Gianmarco Cavallo - Frontend Developer"
+  title="João Pedrozo - Frontend Developer"
   description="Software developer with strong focus on the user experience animations and micro interactions"
 >
   <main
