--- a/src/components/IntroCard.astro
+++ b/src/components/IntroCard.astro
@@ -45,7 +45,7 @@ import Tooltip from "./Tooltip/index";
       height="300"
       src="/eu.jpg"
       class="w-auto max-h-[300px] select-none absolute right-[-110px] bottom-[-20px] z-[-1] opacity-50 md:opacity-100 md:relative md:right-auto md:bottom-auto md:z-auto pointer-events-none"
-      alt="memoji of gianmarco"
+      alt="memoji of joaopedrozo"
     />
   </div>
 </Card>
