chore: change favicon and personal texts

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,7 +32,7 @@ import Globe from "../components/Globe";
 </script>
 
 <Layout
-  title="João Pedrozo - Frontend Developer"
+  title="jpbp* - developer, designer, and creator."
   description="Software developer with strong focus on the user experience animations and micro interactions"
 >
   <main
