--- a/src/components/IntroCard.astro
+++ b/src/components/IntroCard.astro
@@ -12,11 +12,11 @@ import Tooltip from "./Tooltip/index";
       <div class="flex flex-col h-full">
         <h6 class="text-sm font-light m-0 text-gray-500">welcome</h6>
         <p class="m-0 font-light text-xl">
-          Hi. I'm <b class="font-bold">João Pedrozo</b>, a software developer
+          hi. i'm <b class="font-bold">João Pedrozo</b>, a software developer
           with strong focus on user experience, design and performance. <br
           /><br />
-          I blend design finesse and performance wizardry effortlessly, sculpting
-          digital experiences with a touch of artistry.
+          I blend design finesse and performance wizardry, sculpting digital experiences
+          with a touch of magic.
         </p>
       </div>
       <div class="flex gap-4">
