--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -22,14 +22,19 @@ const posts = (await getCollection("blog")).sort(
   title="João Pedrozo - Blog"
   description="Software developer with strong focus on the user experience animations and micro interactions"
 >
+  <nav class="mt-24">
+    <ul>
+      <li>
+        <a href="/" class="text-white hover:text-red-500">home</a>
+        <a href="/" class="text-white hover:text-red-500">projects</a>
+        <a href="/" class="text-white hover:text-red-500">about</a>
+        <a href="/blog" class="text-red-700">blog</a>
+      </li>
+    </ul>
+  </nav>
   <main
     class="w-screen h-screen flex flex-col justify-start items-start max-w-3xl mx-auto p-8"
   >
-    <a
-      href="/"
-      class="text-white bg-neutral-900 hover:bg-neutral-800 px-4 py-2 mb-8 border-1 border-solid border-neutral-600 rounded-lg"
-      >Back</a
-    >
     <h1 class="text-4xl font-bold mb-4 text-neutral-100">Posts</h1>
     <ul class="w-full">
       {
